--- a/mindfulhacks/main/sentiment_analysis_test.ipynb
+++ b/mindfulhacks/main/sentiment_analysis_test.ipynb
@@ -238,10 +238,292 @@
    "source": [
     "import pandas as pd \n",
     "\n",
-    "# data = pd.read_csv(\"../datasets/Student Mental health.csv\", index_col=0)\n",
-    "# data\n",
     "data = pd.read_csv(\"../datasets/Mental-Health-Twitter.csv\", index_col=0)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Choose your gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>What is your course?</th>\n",
+       "      <th>Your current year of Study</th>\n",
+       "      <th>What is your CGPA?</th>\n",
+       "      <th>Marital status</th>\n",
+       "      <th>Do you have Depression?</th>\n",
+       "      <th>Do you have Anxiety?</th>\n",
+       "      <th>Do you have Panic attack?</th>\n",
+       "      <th>Did you seek any specialist for a treatment?</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8/7/2020 12:02</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>year 1</td>\n",
+       "      <td>3.00 - 3.49</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8/7/2020 12:04</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Islamic education</td>\n",
+       "      <td>year 2</td>\n",
+       "      <td>3.00 - 3.49</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8/7/2020 12:05</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>BIT</td>\n",
+       "      <td>Year 1</td>\n",
+       "      <td>3.00 - 3.49</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8/7/2020 12:06</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Laws</td>\n",
+       "      <td>year 3</td>\n",
+       "      <td>3.00 - 3.49</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8/7/2020 12:13</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Mathemathics</td>\n",
+       "      <td>year 4</td>\n",
+       "      <td>3.00 - 3.49</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13/07/2020 19:56:49</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>BCS</td>\n",
+       "      <td>year 1</td>\n",
+       "      <td>3.50 - 4.00</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13/07/2020 21:21:42</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Year 2</td>\n",
+       "      <td>3.00 - 3.49</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13/07/2020 21:22:56</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Nursing</td>\n",
+       "      <td>Year 3</td>\n",
+       "      <td>3.50 - 4.00</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13/07/2020 21:23:57</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Pendidikan Islam</td>\n",
+       "      <td>year 4</td>\n",
+       "      <td>3.50 - 4.00</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18/07/2020 20:16:21</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Biomedical science</td>\n",
+       "      <td>Year 2</td>\n",
+       "      <td>3.00 - 3.49</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Choose your gender   Age What is your course?  \\\n",
+       "Timestamp                                                           \n",
+       "8/7/2020 12:02                  Female  18.0          Engineering   \n",
+       "8/7/2020 12:04                    Male  21.0    Islamic education   \n",
+       "8/7/2020 12:05                    Male  19.0                  BIT   \n",
+       "8/7/2020 12:06                  Female  22.0                 Laws   \n",
+       "8/7/2020 12:13                    Male  23.0         Mathemathics   \n",
+       "...                                ...   ...                  ...   \n",
+       "13/07/2020 19:56:49             Female  21.0                  BCS   \n",
+       "13/07/2020 21:21:42               Male  18.0          Engineering   \n",
+       "13/07/2020 21:22:56             Female  19.0             Nursing    \n",
+       "13/07/2020 21:23:57             Female  23.0     Pendidikan Islam   \n",
+       "18/07/2020 20:16:21               Male  20.0   Biomedical science   \n",
+       "\n",
+       "                    Your current year of Study What is your CGPA?  \\\n",
+       "Timestamp                                                           \n",
+       "8/7/2020 12:02                          year 1        3.00 - 3.49   \n",
+       "8/7/2020 12:04                          year 2        3.00 - 3.49   \n",
+       "8/7/2020 12:05                          Year 1        3.00 - 3.49   \n",
+       "8/7/2020 12:06                          year 3        3.00 - 3.49   \n",
+       "8/7/2020 12:13                          year 4        3.00 - 3.49   \n",
+       "...                                        ...                ...   \n",
+       "13/07/2020 19:56:49                     year 1        3.50 - 4.00   \n",
+       "13/07/2020 21:21:42                     Year 2        3.00 - 3.49   \n",
+       "13/07/2020 21:22:56                     Year 3        3.50 - 4.00   \n",
+       "13/07/2020 21:23:57                     year 4        3.50 - 4.00   \n",
+       "18/07/2020 20:16:21                     Year 2        3.00 - 3.49   \n",
+       "\n",
+       "                    Marital status Do you have Depression?  \\\n",
+       "Timestamp                                                    \n",
+       "8/7/2020 12:02                  No                     Yes   \n",
+       "8/7/2020 12:04                  No                      No   \n",
+       "8/7/2020 12:05                  No                     Yes   \n",
+       "8/7/2020 12:06                 Yes                     Yes   \n",
+       "8/7/2020 12:13                  No                      No   \n",
+       "...                            ...                     ...   \n",
+       "13/07/2020 19:56:49             No                      No   \n",
+       "13/07/2020 21:21:42             No                     Yes   \n",
+       "13/07/2020 21:22:56            Yes                     Yes   \n",
+       "13/07/2020 21:23:57             No                      No   \n",
+       "18/07/2020 20:16:21             No                      No   \n",
+       "\n",
+       "                    Do you have Anxiety? Do you have Panic attack?  \\\n",
+       "Timestamp                                                            \n",
+       "8/7/2020 12:02                        No                       Yes   \n",
+       "8/7/2020 12:04                       Yes                        No   \n",
+       "8/7/2020 12:05                       Yes                       Yes   \n",
+       "8/7/2020 12:06                        No                        No   \n",
+       "8/7/2020 12:13                        No                        No   \n",
+       "...                                  ...                       ...   \n",
+       "13/07/2020 19:56:49                  Yes                        No   \n",
+       "13/07/2020 21:21:42                  Yes                        No   \n",
+       "13/07/2020 21:22:56                   No                       Yes   \n",
+       "13/07/2020 21:23:57                   No                        No   \n",
+       "18/07/2020 20:16:21                   No                        No   \n",
+       "\n",
+       "                    Did you seek any specialist for a treatment?  \n",
+       "Timestamp                                                         \n",
+       "8/7/2020 12:02                                                No  \n",
+       "8/7/2020 12:04                                                No  \n",
+       "8/7/2020 12:05                                                No  \n",
+       "8/7/2020 12:06                                                No  \n",
+       "8/7/2020 12:13                                                No  \n",
+       "...                                                          ...  \n",
+       "13/07/2020 19:56:49                                           No  \n",
+       "13/07/2020 21:21:42                                           No  \n",
+       "13/07/2020 21:22:56                                           No  \n",
+       "13/07/2020 21:23:57                                           No  \n",
+       "18/07/2020 20:16:21                                           No  \n",
+       "\n",
+       "[101 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2 = pd.read_csv(\"../datasets/Student Mental health.csv\", index_col=0)\n",
+    "data2"
    ]
   },
   {
@@ -425,14 +707,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<5x23980 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 19 stored elements in Compressed Sparse Row format>"
+       "<4x32428 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 28 stored elements in Compressed Sparse Row format>"
       ]
      },
      "metadata": {},
@@ -441,16 +723,16 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 0, 1], dtype=int64)"
+       "array([1, 1, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_reviews = [\"I love this book\", \"This is a very bad book\", \"This is a very good book\", \"This is a terrible crappy book\", \"meh\"]\n",
+    "new_reviews = [\"Suffering so bad...I wanna kill myself\", \"My emotions are more stable now thanks to some gaming...finally\", \"I wanna drink more coke...the carbonation hits my brain really well\", \"meh\"]\n",
     "review_vector = vec.transform(new_reviews)\n",
     "\n",
     "display(review_vector)\n",
