--- a/mindfulhacks/NLP.ipynb
+++ b/mindfulhacks/NLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "ce83da02-b6b4-44b4-abb1-e8d59e5ecf4f",
    "metadata": {},
    "outputs": [
@@ -27,35 +27,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>label</th>\n",
        "      <th>message</th>\n",
+       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>It's just over 2 years since I was diagnosed w...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>It's Sunday, I need a break, so I'm planning t...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>spam</td>\n",
-       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>Awake but tired. I need to sleep but my brain ...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>RT @SewHQ: #Retro bears make perfect gifts and...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>It’s hard to say whether packing lists are mak...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -63,53 +63,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5567</th>\n",
-       "      <td>spam</td>\n",
-       "      <td>This is the 2nd time we have tried 2 contact u...</td>\n",
+       "      <th>19995</th>\n",
+       "      <td>A day without sunshine is like night.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5568</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Will Ì_ b going to esplanade fr home?</td>\n",
+       "      <th>19996</th>\n",
+       "      <td>Boren's Laws: (1) When in charge, ponder. (2) ...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5569</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Pity, * was in mood for that. So...any other s...</td>\n",
+       "      <th>19997</th>\n",
+       "      <td>The flow chart is a most thoroughly oversold p...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5570</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>The guy did some bitching but I acted like i'd...</td>\n",
+       "      <th>19998</th>\n",
+       "      <td>Ships are safe in harbor, but they were never ...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5571</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Rofl. Its true to its name</td>\n",
+       "      <th>19999</th>\n",
+       "      <td>Black holes are where God is dividing by zero.</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5572 rows × 2 columns</p>\n",
+       "<p>20000 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     label                                            message\n",
-       "0      ham  Go until jurong point, crazy.. Available only ...\n",
-       "1      ham                      Ok lar... Joking wif u oni...\n",
-       "2     spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
-       "3      ham  U dun say so early hor... U c already then say...\n",
-       "4      ham  Nah I don't think he goes to usf, he lives aro...\n",
-       "...    ...                                                ...\n",
-       "5567  spam  This is the 2nd time we have tried 2 contact u...\n",
-       "5568   ham              Will Ì_ b going to esplanade fr home?\n",
-       "5569   ham  Pity, * was in mood for that. So...any other s...\n",
-       "5570   ham  The guy did some bitching but I acted like i'd...\n",
-       "5571   ham                         Rofl. Its true to its name\n",
+       "                                                 message  label\n",
+       "0      It's just over 2 years since I was diagnosed w...      1\n",
+       "1      It's Sunday, I need a break, so I'm planning t...      1\n",
+       "2      Awake but tired. I need to sleep but my brain ...      1\n",
+       "3      RT @SewHQ: #Retro bears make perfect gifts and...      1\n",
+       "4      It’s hard to say whether packing lists are mak...      1\n",
+       "...                                                  ...    ...\n",
+       "19995              A day without sunshine is like night.      0\n",
+       "19996  Boren's Laws: (1) When in charge, ponder. (2) ...      0\n",
+       "19997  The flow chart is a most thoroughly oversold p...      0\n",
+       "19998  Ships are safe in harbor, but they were never ...      0\n",
+       "19999     Black holes are where God is dividing by zero.      0\n",
        "\n",
-       "[5572 rows x 2 columns]"
+       "[20000 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,17 +121,17 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.metrics import classification_report\n",
-    "\n",
-    "df = pd.read_csv('./datasets/spam.csv', encoding=\"ISO-8859-1\")\n",
-    "df.drop(['Unnamed: 2', 'Unnamed: 3', 'Unnamed: 4'], axis=1, inplace=True)\n",
+    "df = pd.read_csv('./datasets/Mental-Health-Twitter.csv')\n",
+    "# df = pd.read_csv('./datasets/spam.csv', encoding=\"ISO-8859-1\")\n",
+    "df.drop(['Unnamed: 0', 'post_id', 'post_created', 'user_id', 'followers', 'friends', 'favourites', 'statuses', 'retweets'], axis=1, inplace=True)\n",
     "# df['label'] = df['class'].map({'ham': 0, 'spam': 1})\n",
-    "df.rename(columns = {\"v1\": \"label\", \"v2\": \"message\"}, inplace = True)\n",
+    "df.rename(columns = {\"post_text\": \"message\"}, inplace = True)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "fb60aade-1969-4f3a-9b6c-bcb658193f84",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "6108e386-426d-4509-ba14-ec669ffe0712",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "34302809-347f-457b-b2f2-7c19b00d6973",
    "metadata": {},
    "outputs": [
@@ -164,12 +164,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         ham       0.99      0.99      0.99      1587\n",
-      "        spam       0.93      0.92      0.92       252\n",
+      "           0       0.88      0.87      0.88      3271\n",
+      "           1       0.88      0.89      0.88      3329\n",
       "\n",
-      "    accuracy                           0.98      1839\n",
-      "   macro avg       0.96      0.95      0.96      1839\n",
-      "weighted avg       0.98      0.98      0.98      1839\n",
+      "    accuracy                           0.88      6600\n",
+      "   macro avg       0.88      0.88      0.88      6600\n",
+      "weighted avg       0.88      0.88      0.88      6600\n",
       "\n"
      ]
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "42e09491-92b5-463d-8ca6-1b316b90d6c0",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (microsoft store)",
+   "display_name": "Python 3.9.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -214,11 +214,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ac7d15d291221f0af7fcc7c074083313d0c1ac67ce904ea721edc953ffdf842d"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
