--- a/mindfulhacks/NLP.ipynb
+++ b/mindfulhacks/NLP.ipynb
@@ -200,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -214,11 +214,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "ac7d15d291221f0af7fcc7c074083313d0c1ac67ce904ea721edc953ffdf842d"
    }
   }
  },
